# vlm_navigation

./: .gitmodules  BUILD-DOCKER-CONTAINER.sh  README.md  RUN-DOCKER-CONTAINER.sh  datset_load.py  debug_vlm.py  pyproject.toml
deploy/: README.md
deploy/hsr_data_collection/: .gitignore  README.md  RUN-DOCKER-CONTAINER.sh
deploy/hsr_data_collection/conversion/: collage.py  hsr_utils.py  pkl2np.py  pkl2rlds.py  pkl2stats.py  pkl2video.py  rosbag2pkl.py  trajectory_filter.py
deploy/hsr_data_collection/docker/: Dockerfile
deploy/hsr_data_collection/hsr_data_collection/: CMakeLists.txt  package.xml
deploy/hsr_data_collection/hsr_data_collection/config/: hsr_data_collection_config.yaml  location_and_object_names.yaml
deploy/hsr_data_collection/hsr_data_collection/launch/: hsr_auto_data_collection.launch  hsr_nir_vr_teleop_data_collection.launch  hsr_teleop_data_collection.launch  hsr_tidyup_teleop_data_collection.launch  hsr_vr_data_collection.launch
deploy/hsr_data_collection/hsr_data_collection/scripts/: command_generator.py  dualshock_interface.py  rosbag_manager.py  spacemouse_interface.py  status_led_manager.py  tidyup_teleop_interface.py
deploy/hsr_data_collection/hsr_data_collection/scripts/nir_vr_teleop/: docker-compose.yml  nir_quest_interface.py
deploy/hsr_data_collection/hsr_data_collection/scripts/tmc_vr_teleop/: tmc_quest_interface.py  vr_system.py
deploy/hsr_data_collection/hsr_data_msgs/: CMakeLists.txt  package.xml
deploy/hsr_data_collection/hsr_data_msgs/srv/: StringTrigger.srv
deploy/hsr_data_collection/hsrb_pseudo_endeffector_position_controller/: CMakeLists.txt  package.xml
deploy/hsr_data_collection/hsrb_pseudo_endeffector_position_controller/src/: hsrb_pseudo_endeffector_position_controller.cpp  hsrb_pseudo_endeffector_position_controller.hpp
deploy/hsr_openpi_deploy/: CMakeLists.txt  Dockerfile  package.xml
deploy/hsr_openpi_deploy/launch/: hsr_openpi.launch  hsr_vlm_nav.launch
deploy/hsr_openpi_deploy/scripts/: hsr_openpi.py  hsr_vlm_nav.py
docker/: Dockerfile.deploy  Dockerfile.train  docker-compose.yml  openpi.def
docker/scripts/: fix_roslogging.sh  initialize-docker-container.sh  initialize-ros-env.sh  roslogging.py
scripts/: connect.sh  disconnect.sh  vlm_debug.py
text_format/: systemprompt.txt  userformat.txt
