<?xml version="1.0"?>
<package format="2">
  <name>hsr_data_msgs</name>
  <version>0.0.0</version>
  <description>The hsr_data_msgs package</description>

  <maintainer email="jumpei_arima@mail.toyota.co.jp">Jumpei Arima</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
