<?xml version="1.0"?>
<package>
  <name>hsrb_pseudo_endeffector_position_controller</name>
  <version>0.0.0</version>
  <description>The hsrb_pseudo_endeffector_position_controller package</description>
  <maintainer email="jumpei_arima@mail.toyota.co.jp">Jumpei Arima</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tmc_manipulation_types_bridge</build_depend>
  <build_depend>tmc_robot_kinematics_model</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tmc_manipulation_types_bridge</run_depend>
  <run_depend>tmc_robot_kinematics_model</run_depend>
  <run_depend>trajectory_msgs</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
